objects/EOF_Notify__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Notifiche</relationshipLabel>
        <relationshipName>Notifiche</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Notifiche</relationshipLabel>
        <relationshipName>Notifiche</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Notifies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Causale_Scarto__c</fullName>
        <label>Causale Scarto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Formato dati errato o incompleto</fullName>
                </value>
                <value>
                    <fullName>Ticket aperto per stesso ID risorsa</fullName>
                </value>
                <value>
                    <fullName>ID Risorsa inesistente</fullName>
                </value>
                <value>
                    <fullName>Codice Comunicazione OLO già presente</fullName>
                </value>
                <value>
                    <fullName>Guasto Aperto come Post-Provisioning oltre i termini previsti</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Causale_Sospensione__c</fullName>
        <label>Causale Sospensione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>Sede OLO/CLIENTE FINALE inaccessibile</fullName>
                </value>
                <value>
                    <fullName>Cliente Irreperibile</fullName>
                </value>
                <value>
                    <fullName>Cliente Indisponibile</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Codice_Rifiuto_Sospensione_Annullamento__c</fullName>
        <formula>IF(CONTAINS(TEXT(Motivo_Rifiuto_Sospensione_Annullamento__c),&apos;Cliente rifiuta&apos;),&apos;D_S2&apos;,
IF(ISBLANK(TEXT(Motivo_Rifiuto_Sospensione_Annullamento__c)),&apos;&apos;,
CASE( TEXT(Motivo_Rifiuto_Sospensione_Annullamento__c),
&quot;Città/POP non vendibile per l&apos;OLO&quot;, &apos;B_K16&apos;, 
&quot;OLO non abilitato all&apos;invio dell&apos;ordine&quot;, &apos;B_K17&apos;,
&apos;Cliente irreperibile on-call&apos;, &apos;D_S1&apos;,
&apos;Cliente rifiuta l\&apos;intervento on-call&apos;, &apos;D_S2&apos;,
&apos;Rifiuto cliente on-field&apos;, &apos;D_S3&apos;,
&apos;ID Building esistente ma non è quello per cui il cliente ha richiesto attivazione&apos;,&apos;C_S12&apos;,
&apos;Irreperibilità cliente on-field&apos;, &apos;D_S4&apos;,
&apos;In attesa realizzazione RFA&apos;, &apos;C_S5&apos;,
&apos;RFC - Attesa Permesso Amministratore&apos;, &apos;C_S6&apos;,
&apos;RFA - Attesa Permesso Amministratore&apos;, &apos;C_S7&apos;,
&apos;RFC - Blocco tecnico provvisorio&apos;, &apos;C_S8&apos;,
&apos;RFA - Blocco tecnico provvisorio&apos;, &apos;C_S9&apos;,
&apos;RFC - Blocco Generico&apos;, &apos;C_S10&apos;,
&apos;RFA - Blocco Generico&apos;, &apos;C_S11&apos;,
&apos;Annullamento su richiesta OLO&apos;, &apos;D_A1&apos;,
&apos;Ripianificazione appuntamento con Cliente&apos;, &apos;R_A1&apos;,
&apos;Rimodulazione per Sospensione&apos;, &apos;R_A2&apos;,
&apos;Data Attesa Consegna non conforme agli SLA&apos;, &apos;A_K3&apos;,
&apos;Identificativo Building Errato&apos;, &apos;B_K4&apos;,
&apos;Building non RFC/RFA&apos;, &apos;B_K5&apos;,
&apos;Associazione ID Building-POP errata&apos;, &apos;B_K6&apos;,
&apos;GPON vincolante non utilizzabile&apos;, &apos;C_K7&apos;,
&apos;Building non collegabile RFA&apos;, &apos;C_K8&apos;,
&apos;Scala non collegabile RFA&apos;, &apos;C_K9&apos;,
&apos;Borchia Ottica occupata da altro OLO&apos;, &apos;C_K10&apos;,
&apos;Sbraccio non effettuabile&apos;, &apos;C_K11&apos;,
&apos;GPON non confermata in Espletamento&apos;, &apos;C_K12&apos;,
&apos;ID Risorsa da cessare inesistente/errato&apos;, &apos;C_K13&apos;,
&apos;Mancanza permessi di transito o accesso da terze parti&apos;, &apos;C_K15&apos;,
&apos;Data Attesa Consegna coincidente con un giorno festivo o con un sabato&apos;, &apos;A_K14&apos;,
IF( BEGINS(TEXT(Motivo_Rifiuto_Sospensione_Annullamento__c), &apos;Campo&apos;) , &apos;A_K1&apos;, &apos;A_K2&apos;))))</formula>
        <label>Codice Rifiuto Sospensione Annullamento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_element_istanziato__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial element istanziato</label>
        <referenceTo>OF_CommercialElementIstanziato__c</referenceTo>
        <relationshipLabel>Notifiche</relationshipLabel>
        <relationshipName>Notifiche</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Notifiche</relationshipLabel>
        <relationshipName>Notifiche</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Descrizione_Evento_Risoluzione__c</fullName>
        <inlineHelpText>1: Risolto: tratta verticale
2: Risolto: tratta orizzontale
3: Non riscontrato: Senza Uscita
4: Non riscontrato: Con Uscita
5: Risolto: Sbraccio
6: Risolto: Borchia Ottica
7: Non Risolvibile: Causa Impianto Cliente
8: Non Risolvibile: Causa CPE</inlineHelpText>
        <label>Descrizione Intervento Risoluzione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <isActive>false</isActive>
                    <label>4</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <isActive>false</isActive>
                    <label>5</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <isActive>false</isActive>
                    <label>6</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <isActive>false</isActive>
                    <label>7</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <isActive>false</isActive>
                    <label>8</label>
                </value>
                <value>
                    <fullName>Chiuso Per Timeout OK</fullName>
                    <isActive>false</isActive>
                    <label>Chiuso Per Timeout OK</label>
                </value>
                <value>
                    <fullName>Non Riscontrato: Con Uscita</fullName>
                </value>
                <value>
                    <fullName>Non Riscontrato: Senza Uscita</fullName>
                </value>
                <value>
                    <fullName>Non Risolvibile: Causa CPE Cliente</fullName>
                </value>
                <value>
                    <fullName>Non Risolvibile: Causa Impianto Cliente</fullName>
                </value>
                <value>
                    <fullName>Non Risolvibile: Problemi Di Rete Cliente (Es. Wi-Fi Poco Performante Causa Disposizione Casa Cliente, Configurazione PC)</fullName>
                </value>
                <value>
                    <fullName>Non Risolvibile: Problemi Di Rete OLO (Es. Problema di Scheda In Centrale OLO, Problema Di Configurazione OLO)</fullName>
                </value>
                <value>
                    <fullName>Ribaltamento Effettuato</fullName>
                </value>
                <value>
                    <fullName>Risolto: Borchia Ottica</fullName>
                </value>
                <value>
                    <fullName>Risolto: Sbraccio</fullName>
                </value>
                <value>
                    <fullName>Risolto: Tratta Verticale</fullName>
                </value>
                <value>
                    <fullName>Risolto Mediante Intervento Congiunto</fullName>
                </value>
                <value>
                    <fullName>Risolto OLO/CLIENTE: Configurazione CPE/ONT Cliente</fullName>
                </value>
                <value>
                    <fullName>Risolto OLO/CLIENTE: Reset CPE/ONT Cliente</fullName>
                </value>
                <value>
                    <fullName>Risolto OLO/CLIENTE: Sostituzione Bretella Ottica</fullName>
                </value>
                <value>
                    <fullName>Risolto OLO/CLIENTE: Sostituzione CPE Cliente</fullName>
                </value>
                <value>
                    <fullName>Risolto OLO/CLIENTE: Sostituzione ONT Cliente</fullName>
                </value>
                <value>
                    <fullName>Risolto Tratta Orizzontale: Centrale</fullName>
                </value>
                <value>
                    <fullName>Risolto Tratta Orizzontale: Rete Primaria</fullName>
                </value>
                <value>
                    <fullName>Risolto Tratta Orizzontale: Rete Secondaria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Codice_Comunicazione_OLO__c</fullName>
        <label>Codice Comunicazione OLO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Codice_Motivazione_Rimodulazione__c</fullName>
        <formula>CASE( TEXT(EOF_Reason_Rimodulazione_DAC__c), 
&apos;Rimodulazione per Sospensione provisioning causa EOF&apos;, &apos;R_A2&apos;, 
&apos;Ripianificazione appuntamento causa EOF&apos;, &apos;R_A3&apos;, 
&apos;Ripianificazione appuntamento causa OLO&apos;,&apos;R_A4&apos;,
&apos;Accettazione appuntamento OLO&apos;,&apos;R_A5&apos;,
&apos;Modifica/Comunicazione appuntamento ad OLO&apos;,&apos;R_A6&apos;,
&apos;Ripianificazione appuntamento causa Cliente&apos;,&apos;R_A1&apos;,&apos;&apos;)</formula>
        <label>Codice Motivazione Rimodulazione</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Codice_Operatore__c</fullName>
        <label>EOF Codice Operatore</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Codice_Ordine_EOF__c</fullName>
        <label>Codice Ordine EOF</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Codice_Ordine_OLO__c</fullName>
        <formula>Caso__r.EOF_Codice_Ordine_OLO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codice Ordine OLO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_CreatedDate_Formula__c</fullName>
        <formula>IF ( DATEVALUE(CreatedDate) &gt;= 
DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) 
+ 
( 
14- 
CASE( MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) - DATE (1900,1,7),7)) 
) 
&amp;&amp; 
DATEVALUE(CreatedDate) &lt; 
DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) 
+ 
( 
7- 
CASE( MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) - DATE (1900,1,7),7)) 
), 
LEFT ( TEXT (CreatedDate+ 2/24 ), 19), 
LEFT ( TEXT (CreatedDate+ 1/24), 19) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate_Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Espletamento_Ordine__c</fullName>
        <label>Data Espletamento Ordine</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Notifica_FORMULA__c</fullName>
        <formula>IF ( DATEVALUE(EOF_Data_Notifica__c) &gt;= 
DATE ( YEAR (DATEVALUE(EOF_Data_Notifica__c)),3,1) 
+ 
( 
14- 
CASE( MOD(DATE ( YEAR (DATEVALUE(EOF_Data_Notifica__c)),3,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE(EOF_Data_Notifica__c)),3,1) - DATE (1900,1,7),7)) 
) 
&amp;&amp; 
DATEVALUE(EOF_Data_Notifica__c) &lt; 
DATE ( YEAR (DATEVALUE(EOF_Data_Notifica__c)),11,1) 
+ 
( 
7- 
CASE( MOD(DATE ( YEAR (DATEVALUE(EOF_Data_Notifica__c)),11,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE(EOF_Data_Notifica__c)),11,1) - DATE (1900,1,7),7)) 
), 
LEFT ( TEXT (EOF_Data_Notifica__c+ 2/24 ), 19), 
LEFT ( TEXT (EOF_Data_Notifica__c+ 1/24), 19) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Notifica FORMULA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Notifica__c</fullName>
        <label>Data Notifica</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Creazione__c</fullName>
        <label>Data/Ora Creazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Intervento_Congiunto__c</fullName>
        <label>Data/Ora_Intervento_Congiunto</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Notifica_Annullamento__c</fullName>
        <label>Data/Ora Notifica Annullamento</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Notifica_Chiusura__c</fullName>
        <label>Data/Ora Notifica Chiusura</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Notifica_Desospensione__c</fullName>
        <label>Data/Ora Notifica Desospensione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Notifica_Sospensione__c</fullName>
        <label>Data/Ora Notifica Sospensione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Data_Ora_Scarto__c</fullName>
        <label>Data/Ora Scarto</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Descrizione_Causale_Scarto__c</fullName>
        <label>Descrizione Causale Scarto</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EOF_Esito_Consegna_Apparato__c</fullName>
        <label>Esito Consegna Apparato</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positivo</fullName>
                </value>
                <value>
                    <fullName>Negativo</fullName>
                </value>
                <value>
                    <fullName>Positivo e ribaltamento effettuato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Esito_Consegna_Apparato_ctrl__c</fullName>
        <formula>CASE(TEXT(EOF_Esito_Consegna_Apparato__c),
&apos;Positivo&apos; , &apos;1&apos;,
&apos;Positivo e ribaltamento effettuato&apos;, &apos;2&apos;,
&apos;Negativo&apos;, &apos;0&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Esito Consegna Apparato ctrl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_GPON_Attestazione__c</fullName>
        <label>GPON Attestazione</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_ID_Apparato_Consegnato__c</fullName>
        <label>ID Apparato Consegnato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_ID_Notifica__c</fullName>
        <label>ID Notifica</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_ID_Risorsa__c</fullName>
        <label>ID Risorsa</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_ID_Splitter_Secondario__c</fullName>
        <label>ID Splitter Secondario</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Impresa__c</fullName>
        <label>Impresa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Intervento_Congiunto__c</fullName>
        <label>Intervento_Congiunto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Inviata__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inviata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOF_Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Nuova_DAC__c</fullName>
        <label>Nuova DAC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EOF_Orario_DAC__c</fullName>
        <label>Orario DAC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>08:30 - 10:30</fullName>
                </value>
                <value>
                    <fullName>11.30 - 13.30</fullName>
                </value>
                <value>
                    <fullName>14:30 - 16:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Parametri_Trasmissivi_Ottici__c</fullName>
        <label>Parametri Trasmissivi Ottici</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Posizione_Splitter_Secondario__c</fullName>
        <label>Posizione Splitter Secondario</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Reason_Rimodulazione_DAC__c</fullName>
        <label>Reason Rimodulazione DAC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rimodulazione per Sospensione provisioning causa EOF</fullName>
                </value>
                <value>
                    <fullName>Ripianificazione appuntamento causa EOF</fullName>
                </value>
                <value>
                    <fullName>Ripianificazione appuntamento causa OLO</fullName>
                </value>
                <value>
                    <fullName>Accettazione appuntamento OLO</fullName>
                </value>
                <value>
                    <fullName>Modifica/Comunicazione appuntamento ad OLO</fullName>
                </value>
                <value>
                    <fullName>Ripianificazione appuntamento causa Cliente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Referente_desospensione__c</fullName>
        <label>Referente desospensione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Rischedulazione_Appuntamento__c</fullName>
        <label>Rischedulazione Appuntamento</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EOF_Stato_Richiesta__c</fullName>
        <label>Stato Richiesta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>KO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Stato_Richiesta_ctrl__c</fullName>
        <formula>IF(  TEXT(EOF_Stato_Richiesta__c) == &apos;OK&apos; , &apos;0&apos;,
 IF(TEXT(EOF_Stato_Richiesta__c)== &apos;&apos;,&apos;&apos;, &apos;1&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stato Richiesta ctrl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Tec_Eof__c</fullName>
        <label>Tec_Eof</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Tel_Tec_Eof__c</fullName>
        <label>Tel_Tec_Eof</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Tipo_Comunicazione_ctrl__c</fullName>
        <formula>CASE(  RecordType.Name , &apos;Notifica di accettazione&apos;, &apos;6&apos;,
                          &apos;Notifica di acquisizione&apos;, &apos;5&apos;,
                          &apos;Notifica di annullamento&apos;, &apos;13&apos;,
                          &apos;Notifica di cessazione&apos;, &apos;12&apos;,
                          &apos;Notifica di desospensione&apos;, &apos;10&apos;,
                          &apos;Notifica di espletamento&apos;, &apos;7&apos;,
                          &apos;Notifica di rimodulazione DAC&apos;, &apos;8&apos;,
                          &apos;Notifica di sospensione&apos;, &apos;9&apos; ,
                          &apos;Notifica di accettazione KO&apos;,&apos;6&apos;,
                          &apos;Notifica di cessazione KO&apos;,&apos;12&apos;,
                          &apos;Notifica di acquisizione KO&apos;,&apos;5&apos;,
                          &apos;Notifica di espletamento KO&apos;,&apos;7&apos;,&apos;INVALID&apos;)</formula>
        <label>Tipo Comunicazione ctrl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Tipo_di_intervento__c</fullName>
        <label>Tipo di intervento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verticale strutturato e sbraccio</fullName>
                </value>
                <value>
                    <fullName>Sbraccio</fullName>
                </value>
                <value>
                    <fullName>Monofibra interno</fullName>
                </value>
                <value>
                    <fullName>Monofibra esterno</fullName>
                </value>
                <value>
                    <fullName>Borchia già installata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Tipo_di_intervento_aggiuntivo__c</fullName>
        <label>Tipo di intervento aggiuntivo</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nessun Intervento</fullName>
                </value>
                <value>
                    <fullName>Installazione CPE</fullName>
                </value>
                <value>
                    <fullName>Ribaltamento Impianto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flag_Pagamento__c</fullName>
        <label>Flag Pagamento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivo_Rifiuto_Sospensione_Annullamento__c</fullName>
        <label>Motivo Rifiuto Sospensione Annullamento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cliente irreperibile on-call</fullName>
                </value>
                <value>
                    <fullName>Cliente rifiuta l&apos;intervento on-call</fullName>
                </value>
                <value>
                    <fullName>Rifiuto cliente on-field</fullName>
                </value>
                <value>
                    <fullName>Irreperibilità cliente on-field</fullName>
                </value>
                <value>
                    <fullName>In attesa realizzazione RFA</fullName>
                </value>
                <value>
                    <fullName>RFC - Attesa Permesso Amministratore</fullName>
                </value>
                <value>
                    <fullName>RFA - Attesa Permesso Amministratore</fullName>
                </value>
                <value>
                    <fullName>RFC - Blocco tecnico provvisorio</fullName>
                </value>
                <value>
                    <fullName>RFA - Blocco tecnico provvisorio</fullName>
                </value>
                <value>
                    <fullName>RFC - Blocco Generico</fullName>
                </value>
                <value>
                    <fullName>RFA - Blocco Generico</fullName>
                </value>
                <value>
                    <fullName>Annullamento su richiesta OLO</fullName>
                </value>
                <value>
                    <fullName>Ripianificazione appuntamento con Cliente</fullName>
                </value>
                <value>
                    <fullName>Building non collegabile RFA</fullName>
                </value>
                <value>
                    <fullName>Scala non collegabile RFA</fullName>
                </value>
                <value>
                    <fullName>Borchia Ottica occupata da altro OLO</fullName>
                </value>
                <value>
                    <fullName>Sbraccio non effettuabile</fullName>
                </value>
                <value>
                    <fullName>GPON non confermata in Espletamento</fullName>
                </value>
                <value>
                    <fullName>ID Risorsa da cessare inesistente/errato</fullName>
                </value>
                <value>
                    <fullName>Mancanza permessi di transito o accesso da terze parti</fullName>
                </value>
                <value>
                    <fullName>Identificativo Building Errato</fullName>
                </value>
                <value>
                    <fullName>Data Attesa Consegna non conforme agli SLA</fullName>
                </value>
                <value>
                    <fullName>Building non RFC/RFA</fullName>
                </value>
                <value>
                    <fullName>Associazione ID Building-POP errata</fullName>
                </value>
                <value>
                    <fullName>ID Building esistente ma non è quello per cui il cliente ha richiesto attivazione</fullName>
                </value>
                <value>
                    <fullName>Data Attesa Consegna coincidente con un giorno festivo o con un sabato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numero_Operatore__c</fullName>
        <label>Numero Operatore</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OF_Billing_OperationType__c</fullName>
        <label>OF_Billing_OperationType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Billing_Type__c</fullName>
        <label>OF_Billing_Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CheckEspletamento__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckEspletamento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_JsonRequest__c</fullName>
        <label>OF_JsonRequest</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OF_TT_ID_Notifica__c</fullName>
        <formula>IF(isblank(EOF_ID_Notifica__c), Name, EOF_ID_Notifica__c)</formula>
        <label>ID Notifica</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_TT_Tipo_Comunicazione__c</fullName>
        <label>Tipo Comunicazione Trouble Ticket</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>Notifica Scarto</fullName>
                </value>
                <value>
                    <fullName>Notifica Presa in Carico</fullName>
                </value>
                <value>
                    <fullName>Notifica Sospensione</fullName>
                </value>
                <value>
                    <fullName>Notifica Desospensione</fullName>
                </value>
                <value>
                    <fullName>Notifica Annullamento</fullName>
                </value>
                <value>
                    <fullName>Notifica Richiesta Chiusura</fullName>
                </value>
                <value>
                    <fullName>Notifica Timeout OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OF_isElaborato__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isElaborato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stato_Ticket__c</fullName>
        <label>Stato Ticket</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>Scartato</fullName>
                </value>
                <value>
                    <fullName>In Lavorazione</fullName>
                </value>
                <value>
                    <fullName>Sospeso</fullName>
                </value>
                <value>
                    <fullName>Chiuso</fullName>
                </value>
                <value>
                    <fullName>Annullato</fullName>
                </value>
                <value>
                    <fullName>Richiesta Chiusura</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_Comunicazione__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo Comunicazione</label>
        <type>Text</type>
    </fields>
</CustomObject>